# esm2_finetune

./: .gitattributes  .gitignore  README.md  pyproject.toml
esm2_finetune.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: download_esm2.py
